<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RatingBar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tit">RATING BAR EXAMPLE</string>
    <string name="rate">RATE</string>
    <string name="rateafa">Rate aforandroid.info</string>
    <string name="rating">YOUR RATING IS :</string>
    <string name="empty">"  "</string>

</resources>
